# internal/router/api/crawlaccount.go
@@ -3,30 +3,29 @@ package api
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/stonecool/livemusic-go/internal"
-	"github.com/stonecool/livemusic-go/internal/config"
+	crawl2 "github.com/stonecool/livemusic-go/internal/crawl"
 	http2 "github.com/stonecool/livemusic-go/internal/http"
 	"github.com/unknwon/com"
 	"net/http"
-	"reflect"
 )
 
-type addCrawlAccountForm struct {
+type crawlAccountForm struct {
 	AccountType string `json:"account_type" valid:"Required;MaxSize(255)"`
 }
 
 // AddCrawlAccount
 //
-//	@Summary	Add a crawl
+//	@Summary	Add crawl account
 //	@Accept		json
-//	@Param		form	body	api.addCrawlAccountForm	true	"created crawl account object"
+//	@Param		form	body	api.crawlAccountForm	true	"created crawl account object"
 //	@Produce	json
 //	@Success	200	{object}	http.Response
 //	@Failure	400	{object}	http.Response
-//	@Router		/api/v1/crawls [post]
+//	@Router		/api/v1/crawl-accounts [post]
 func AddCrawlAccount(ctx *gin.Context) {
 	var (
 		context = http2.Context{Context: ctx}
-		form    addCrawlAccountForm
+		form    crawlAccountForm
 	)
 
 	httpCode, errCode := BindAndValid(ctx, &form)
@@ -42,23 +41,46 @@ func AddCrawlAccount(ctx *gin.Context) {
 	}
 }
 
-// GetCrawlAccount
+// DeleteCrawlAccount
 //
-//	@Summary	Get a single crawl
+//	@Summary	Delete crawl account
 //	@Param		id	path	int	true	"ID"	default(1)
 //	@Produce	json
 //	@Success	200	{object}	http.Response
 //	@Failure	400	{object}	http.Response
-//	@Router		/api/v1/crawls/{id} [get]
-func GetCrawlAccount(ctx *gin.Context) {
-	type getForm struct {
-		ID int `valid:"Required;Min(1)"`
-	}
-
+//	@Router		/api/v1/crawl-accounts/{id} [delete]
+func DeleteCrawlAccount(ctx *gin.Context) {
 	var (
 		context = http2.Context{Context: ctx}
-		form    getForm
-		crawl   *config.Account
+		form    idForm
+	)
+
+	form.ID = com.StrTo(ctx.Param("id")).MustInt()
+	httpCode, errCode := Valid(&form)
+	if errCode != http2.Success {
+		context.Response(httpCode, errCode, nil)
+		return
+	}
+
+	if internal.DeleteCrawlAccount(form.ID) {
+		context.Response(http.StatusOK, 0, nil)
+	} else {
+		context.Response(http.StatusBadRequest, 0, nil)
+	}
+}
+
+// GetCrawlAccount
+//
+//	@Summary	Get crawl account
+//	@Param		id	path	int	true	"ID"	default(1)
+//	@Produce	json
+//	@Success	200	{object}	http.Response
+//	@Failure	400	{object}	http.Response
+//	@Router		/api/v1/crawl-accounts/{id} [get]
+func GetCrawlAccount(ctx *gin.Context) {
+	var (
+		context = http2.Context{Context: ctx}
+		form    idForm
 	)
 
 	form.ID = com.StrTo(ctx.Param("id")).MustInt()
@@ -74,11 +96,6 @@ func GetCrawlAccount(ctx *gin.Context) {
 		return
 	}
 
-	if reflect.ValueOf(*crawl).IsZero() {
-		context.Response(http.StatusOK, -1, nil)
-		return
-	}
-
 	context.Response(http.StatusOK, 0, c)
 }
 
@@ -90,39 +107,44 @@ func GetCrawlAccount(ctx *gin.Context) {
 //	@Failure	500	{object}	http.Response
 //	@Router		/api/v1/crawls [get]
 func GetCrawlAccounts(ctx *gin.Context) {
+
 }
 
-// DeleteCrawlAccount
-func DeleteCrawlAccount(ctx *gin.Context) {
-}
+// CrawlAccountWebSocket
+//
+//	@Summary	Get multiple accounts
+//	@Param		id	path	int	true	"ID"	default(1)
+//	@Produce	json
+//	@Success	200	{object}	http.Response
+//	@Failure	500	{object}	http.Response
+//	@Router		/api/v1/crawl-accounts/ws/{id} [get]
+func CrawlAccountWebSocket(ctx *gin.Context) {
+	var (
+		context = http2.Context{Context: ctx}
+		form    idForm
+	)
 
-func CrawlWebSocket(ctx *gin.Context) {
-	//type Form struct {
-	//	ID int `valid:"Required;Min(1)"`
-	//}
-	//
-	//var (
-	//	context = http2.Context{Context: ctx}
-	//	form    Form
-	//)
-	//
-	//form.ID = com.StrTo(ctx.Param("id")).MustInt()
-	//httpCode, errCode := Valid(&form)
-	//if errCode != http2.Success {
-	//	context.Response(httpCode, errCode, nil)
-	//	return
-	//}
-	//
-	//account, err := internal.GetCrawlAccount(form.ID)
-	//if err != nil {
-	//	return
-	//}
-	//
-	//client, err := NewClient(account, ctx)
-	//if err != nil {
-	//	return
-	//}
-	//
-	//go client.Read()
-	//go client.Write()
+	form.ID = com.StrTo(ctx.Param("id")).MustInt()
+	httpCode, errCode := Valid(&form)
+	if errCode != http2.Success {
+		context.Response(httpCode, errCode, nil)
+		return
+	}
+
+	crawl, err := crawl2.GetCrawl(form.ID)
+	if err != nil {
+		context.Response(http.StatusBadRequest, 0, nil)
+		return
+	}
+
+	// TODO 同一个account,多个new的问题
+	client, err := NewClient(crawl, ctx)
+	if err != nil {
+		return
+	}
+
+	go client.Read()
+	go client.Write()
+
+	context.Response(http.StatusOK, 0, nil)
 }
