# internal/router/router.go
@@ -14,19 +14,24 @@ func InitRouter(engine *gin.Engine) error {
 	apiV1 := router.Group("/api/v1")
 	// 爬虫账号
 	apiV1.POST("/crawl-accounts", api.AddCrawlAccount)
+	apiV1.DELETE("/crawl-accounts/:id", api.DeleteCrawlAccount)
 	apiV1.GET("/crawl-accounts/:id", api.GetCrawlAccount)
 	apiV1.GET("/crawl-accounts", api.GetCrawlAccounts)
-	apiV1.DELETE("/crawl-accounts/:id", api.DeleteCrawlAccount)
-	apiV1.GET("/crawl-accounts/ws/:id", api.CrawlWebSocket)
+	apiV1.GET("/crawl-accounts/ws/:id", api.CrawlAccountWebSocket)
 
 	// 爬虫消息
 	apiV1.POST("/crawl-messages/:id", api.AddCrawlMsg)
 	apiV1.DELETE("/crawl-messages/:id", api.DeleteCrawlMsg)
-	apiV1.PUT("/crawl-messages/start/:id", api.StartCrawlMsgProducer)
+	apiV1.PUT("/crawl-messages/start/:id", api.ModifyCrawlMsg)
 	apiV1.POST("/crawl-messages/start/:id", api.StartCrawlMsgProducer)
 
 	// livehouse
-	
+	apiV1.POST("/livehouses", api.AddLivehouse)
+	apiV1.DELETE("/livehouses/:id", api.DeleteLivehouse)
+	apiV1.PUT("/livehouses/:id", api.ModifyLivehouse)
+	apiV1.GET("/livehouses/:id", api.GetLivehouse)
+	apiV1.GET("/livehouses", api.GetLivehouses)
+
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return nil
